Bugfixes for z-index overlapping on sidebar popovers & dropdowns. Fixes ARC-250.

--- a/app/assets/stylesheets/dul-arclight/modules/banners.scss
+++ b/app/assets/stylesheets/dul-arclight/modules/banners.scss
@@ -19,7 +19,6 @@
       -webkit-clip-path: polygon(0 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
       clip-path: polygon(0 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
       white-space: nowrap;
-      z-index: 85;
       padding: 0 35px 0 15px;
       line-height: 1.2em;
 
@@ -49,13 +48,11 @@
       -webkit-clip-path: polygon(20px 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
       clip-path: polygon(20px 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
       margin: 0 -20px;
-      z-index: 81;
     }
 
     &.banner-message {
       right: 0;
       top: 0;
-      z-index: 80;
       padding: 10px 10px 10px 30px;
       line-height: 1.4em;
 
